# qt-UILoader

./: MANIFEST.in  README.md  pyproject.toml  setup.py  u_logic.py
qt_UILoader.egg-info/: PKG-INFO  SOURCES.txt
src/: UILoader.py  u.ui
src/qt_UILoader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
